feat: make join return enough info
